--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
   <meta name="author" content="{{ site.author }}">
 
   <link rel="stylesheet" media="screen" href="{{ site.baseurl }}/assets/css/style.css" type="text/css" />
+  <link rel="stylesheet" media="screen" href="{{ site.baseurl }}/assets/css/bootstrap.css" type="text/css" />
+  <!--<link rel="stylesheet" media="screen" href="{{ site.baseurl }}/assets/css/bootswatch.css" type="text/css" />-->
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
@@ -24,7 +26,7 @@
   <![endif]-->
 </head>
 
-<body>
+<body id="top" class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
 
   {{ content }}
 
@@ -34,18 +36,11 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
 
-  <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-  <script src="{{ site.baseurl }}/assets/js/respond.min.js"></script>
-
-  <!-- Holder images -->
-  <script src="{{ site.baseurl }}/assets/js/holder.min.js"></script>
+  <!-- Bootswatch -->
+  <script src="{{ site.baseurl }}/assets/js/bootswatch.js"></script>
 
   <script>
 
-    // Livereload
-    if(location.hostname == '0.0.0.0') {
-      document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>');
-    }
 
   </script>
 
