--- a/_layouts/global.html
+++ b/_layouts/global.html
@@ -10,13 +10,13 @@ layout: default
   <header class="jumbotron subhead" id="overview" style="background:none">
     <div class="row-fluid">
       <div class="span12">
-        <h1><img src="/assets/img/test/7upspot.gif">&nbsp;<FONT COLOR="#FF0000">P</FONT><FONT COLOR="#FF5A00">e</FONT><FONT COLOR="#FFB400">t</FONT><FONT COLOR="#FFff00">t</FONT><FONT COLOR="#A5ff00">e</FONT><FONT COLOR="#4Bff00">r</FONT><FONT COLOR="#00ff00">s</FONT><FONT COLOR="#00ff5A"> </FONT><blink><FONT COLOR="#00ffB4">4</FONT><FONT COLOR="#00ffff">0</FONT><FONT COLOR="#00B4ff">å</FONT><FONT COLOR="#005Aff">r</FONT><FONT COLOR="#0000ff">s</FONT><FONT COLOR="#4B00ff">f</FONT><FONT COLOR="#A500ff">e</FONT><FONT COLOR="#FF00ff">s</FONT><FONT COLOR="#FF00B4">t</FONT></blink></h1>
+        <h1><img src="{{ site.baseurl }}/assets/img/test/7upspot.gif">&nbsp;<FONT COLOR="#FF0000">P</FONT><FONT COLOR="#FF5A00">e</FONT><FONT COLOR="#FFB400">t</FONT><FONT COLOR="#FFff00">t</FONT><FONT COLOR="#A5ff00">e</FONT><FONT COLOR="#4Bff00">r</FONT><FONT COLOR="#00ff00">s</FONT><FONT COLOR="#00ff5A"> </FONT><blink><FONT COLOR="#00ffB4">4</FONT><FONT COLOR="#00ffff">0</FONT><FONT COLOR="#00B4ff">å</FONT><FONT COLOR="#005Aff">r</FONT><FONT COLOR="#0000ff">s</FONT><FONT COLOR="#4B00ff">f</FONT><FONT COLOR="#A500ff">e</FONT><FONT COLOR="#FF00ff">s</FONT><FONT COLOR="#FF00B4">t</FONT></blink></h1>
         <p class="lead">Välkommen på min fest 25 april 2k20!</p>
       </div>
     </div>
     <marquee>I karantän? Följ festen på din PC, surfa in på <a href="https://live.p-jo.se/40">live.p-jo.se/40</a></marquee>
   </header>
-  <center><img src="/assets/img/custom/birthday.gif"> <img src="/assets/img/custom/birthday.gif"> <img src="/assets/img/custom/birthday.gif"> <img src="/assets/img/custom/birthday.gif"></center>
+  <center><img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"></center>
   <p>&nbsp;</p>
 
 <main id="main">
@@ -36,22 +36,22 @@ layout: default
    <table cellpadding="2" cellspacing="2">
       <tr>
         <td>
-          <img src="/assets/img/test/ie_logo.gif">
+          <img src="{{ site.baseurl }}/assets/img/test/ie_logo.gif">
         </td>
         <td>
-          <img src="/assets/img/test/ns_logo.gif">
+          <img src="{{ site.baseurl }}/assets/img/test/ns_logo.gif">
         </td>
         <td>
-          <img src="/assets/img/test/noframes.gif">
+          <img src="{{ site.baseurl }}/assets/img/test/noframes.gif">
         </td>
         <td>
-          <img src="/assets/img/test/notepad.gif">
+          <img src="{{ site.baseurl }}/assets/img/test/notepad.gif">
         </td>
       </tr>
     </table>
     <p>
 
-   <img src="/assets/img/test/counter2.gif">
+   <img src="{{ site.baseurl }}/assets/img/test/counter2.gif">
  </p>
 </center>
     </div><!-- /container -->
