--- a/_layouts/global.html
+++ b/_layouts/global.html
@@ -16,7 +16,7 @@ layout: default
     </div>
     <marquee>I karantän? Följ festen på din PC, surfa in på <a href="https://live.p-jo.se/40">live.p-jo.se/40</a></marquee>
   </header>
-  <center><img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"></center>
+  <center><img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"> <img src="{{ site.baseurl }}/assets/img/custom/birthday.gif"></center>
   <p>&nbsp;</p>
 
 <main id="main">
